# heatermeter-modern

./: .gitignore  CLAUDE.md  COMPETITIVE-RESEARCH.md  FIRMWARE-UPDATE.md  PLAN.md  PROTOCOL.md  README.md  ROADMAP.md
backend/: conftest.py  pyproject.toml  run_tests.py
backend/heatermeterd/: __init__.py  api.py  apns.py  auth.py  autotune.py  cookdone.py  cookprogram.py  firmware.py  fuel.py  guided.py  hostinteractive.py  hostupdate.py  lidrecovery.py  links.py  main.py  mqtt.py  notify.py  predict.py  presets.py  probewatch.py  protocol.py  report.py  serial_io.py  service.py  sim.py  state.py  store.py
backend/static/: app.js  index.html  manifest.webmanifest  share.html  style.css  sw.js
backend/tests/: test_api.py  test_apns.py  test_auth.py  test_autotune.py  test_autotune_session.py  test_cmdchecksum.py  test_cookdone.py  test_cookprogram.py  test_events.py  test_firmware.py  test_fuel.py  test_guided.py  test_hostinteractive.py  test_hostupdate.py  test_integration_pty.py  test_lidrecovery.py  test_migration.py  test_mqtt.py  test_mqtt_service.py  test_notify.py  test_photos.py  test_predict.py  test_probewatch.py  test_protocol.py  test_report.py  test_service.py  test_sessions.py  test_shakedown.py  test_state.py  test_store.py
backend/tools/: hmmonitor.py  hmsend.py  hmsim.py  replay.py
deploy/: gen-cert.sh  heatermeterd.service  hm-backup.sh  hm-flash  hm-flash.path  hm-flash.service  hm-power  hm-power.path  hm-power.service  hm-update  hm-update.path  hm-update.service  install.sh  release.sh  uart-setup.md
docs/: HOME-ASSISTANT.md
(+43 files in other folders)
